--- a/HUIMining/HUIMining.csproj
+++ b/HUIMining/HUIMining.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transaction.cs" />
     <Compile Include="UtilityList.cs" />
+    <Compile Include="XuLy.cs" />
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
